--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -961,10 +961,6 @@ body {
   height: 2.5rem;
 }
 
-.h-11 {
-  height: 2.75rem;
-}
-
 .h-12 {
   height: 3rem;
 }
@@ -1121,6 +1117,10 @@ body {
   justify-content: center;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
@@ -1220,6 +1220,14 @@ body {
   border-top-width: 1px;
 }
 
+.border-b-0 {
+  border-bottom-width: 0px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
 .border-input {
   border-color: hsl(var(--input));
 }
@@ -1272,19 +1280,6 @@ body {
   background-color: transparent;
 }
 
-.bg-rose-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 113 133 / var(--tw-bg-opacity, 1));
-}
-
-.bg-muted {
-  background-color: hsl(var(--muted));
-}
-
-.bg-muted-foreground {
-  background-color: hsl(var(--muted-foreground));
-}
-
 .p-0 {
   padding: 0px;
 }
@@ -1311,11 +1306,6 @@ body {
 
 .p-\[1px\] {
   padding: 1px;
-}
-
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
 }
 
 .px-2 {
@@ -1376,6 +1366,10 @@ body {
 
 .font-mono {
   font-family: GeistMono, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+.font-sans {
+  font-family: GeistSans, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .text-base {
@@ -1454,6 +1448,11 @@ body {
   text-underline-offset: 4px;
 }
 
+.antialiased {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .opacity-50 {
   opacity: 0.5;
 }
@@ -1493,10 +1492,6 @@ body {
 
 .outline {
   outline-style: solid;
-}
-
-.outline-0 {
-  outline-width: 0px;
 }
 
 .ring-offset-background {
@@ -1577,10 +1572,6 @@ body {
   opacity: 1;
 }
 
-.focus\:border-0:focus {
-  border-width: 0px;
-}
-
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1608,6 +1599,12 @@ body {
 .focus-visible\:ring-1:focus-visible {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus-visible\:ring-0:focus-visible {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
@@ -1750,6 +1747,10 @@ body {
 @media (min-width: 768px) {
   .md\:w-\[220px\] {
     width: 220px;
+  }
+
+  .md\:min-w-\[450px\] {
+    min-width: 450px;
   }
 }
 
