--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -916,6 +916,14 @@ body {
   top: 50%;
 }
 
+.right-0 {
+  right: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -997,6 +1005,14 @@ body {
   height: 100vh;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
 .max-h-\[300px\] {
   max-height: 300px;
 }
@@ -1051,6 +1067,22 @@ body {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[var\(--radix-popover-trigger-width\)\] {
+  width: var(--radix-popover-trigger-width);
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.min-w-\[var\(--radix-popover-trigger-width\)\] {
+  min-width: var(--radix-popover-trigger-width);
 }
 
 .max-w-lg {
@@ -1111,6 +1143,10 @@ body {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -1278,6 +1314,24 @@ body {
 
 .bg-transparent {
   background-color: transparent;
+}
+
+.bg-muted-foreground {
+  background-color: hsl(var(--muted-foreground));
+}
+
+.bg-muted {
+  background-color: hsl(var(--muted));
+}
+
+.bg-zinc-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
+}
+
+.bg-zinc-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
 }
 
 .p-0 {
@@ -1532,6 +1586,24 @@ body {
   }
 }
 
+.animate-in {
+  animation-name: enter;
+  animation-duration: 150ms;
+  --tw-enter-opacity: initial;
+  --tw-enter-scale: initial;
+  --tw-enter-rotate: initial;
+  --tw-enter-translate-x: initial;
+  --tw-enter-translate-y: initial;
+}
+
+.fade-in-0 {
+  --tw-enter-opacity: 0;
+}
+
+.zoom-in-95 {
+  --tw-enter-scale: .95;
+}
+
 .duration-200 {
   animation-duration: 200ms;
 }
@@ -1542,6 +1614,10 @@ body {
 
 .placeholder\:text-muted-foreground::placeholder {
   color: hsl(var(--muted-foreground));
+}
+
+.hover\:border:hover {
+  border-width: 1px;
 }
 
 .hover\:bg-accent:hover {
@@ -1558,6 +1634,28 @@ body {
 
 .hover\:bg-secondary\/80:hover {
   background-color: hsl(var(--secondary) / 0.8);
+}
+
+.hover\:bg-background:hover {
+  background-color: hsl(var(--background));
+}
+
+.hover\:bg-muted-foreground:hover {
+  background-color: hsl(var(--muted-foreground));
+}
+
+.hover\:bg-zinc-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-zinc-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-muted:hover {
+  background-color: hsl(var(--muted));
 }
 
 .hover\:text-accent-foreground:hover {
@@ -1610,6 +1708,10 @@ body {
 
 .focus-visible\:ring-ring:focus-visible {
   --tw-ring-color: hsl(var(--ring));
+}
+
+.focus-visible\:ring-transparent:focus-visible {
+  --tw-ring-color: transparent;
 }
 
 .disabled\:pointer-events-none:disabled {
@@ -1764,6 +1866,11 @@ body {
   .xl\:w-\[260px\] {
     width: 260px;
   }
+}
+
+.dark\:hover\:bg-zinc-800:hover:where(class, class *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
 }
 
 .\[\&\>div\]\:\!rounded-none>div {
