--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -977,6 +977,10 @@ body {
   margin-top: 0.5rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .flex {
   display: flex;
 }
@@ -1562,6 +1566,10 @@ body {
 
 .pt-1 {
   padding-top: 0.25rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .text-center {
